@@ -10705,8 +10705,6 @@ int backend_session_begin (hashcat_ctx_t *hashcat_ctx)
 
   u64 size_total_host_all = 0;
 
-  u32 hardware_power_all = 0;
-
   for (int backend_devices_idx = 0; backend_devices_idx < backend_ctx->backend_devices_cnt; backend_devices_idx++)
   {
     /**
@@ -14497,7 +14495,7 @@ int backend_session_begin (hashcat_ctx_t *hashcat_ctx)
     //    device_param->kernel_threads = kernel_threads;
     device_param->kernel_threads = 0;
 
-    device_param->hardware_power = ((hashconfig->opts_type & OPTS_TYPE_MP_MULTI_DISABLE) ? 1 : device_processors) * device_param->kernel_threads_max;
+    u32 hardware_power_max = ((hashconfig->opts_type & OPTS_TYPE_MP_MULTI_DISABLE) ? 1 : device_processors) * device_param->kernel_threads_max;
 
     u32 kernel_accel_min = device_param->kernel_accel_min;
     u32 kernel_accel_max = device_param->kernel_accel_max;
@@ -14520,7 +14518,7 @@ int backend_session_begin (hashcat_ctx_t *hashcat_ctx)
 
     // this is device_processors * kernel_threads
 
-    accel_limit /= device_param->hardware_power;
+    accel_limit /= hardware_power_max;
 
     // single password candidate size
 
@@ -14563,7 +14561,7 @@ int backend_session_begin (hashcat_ctx_t *hashcat_ctx)
 
     while (kernel_accel_max >= kernel_accel_min)
     {
-      const u64 kernel_power_max = device_param->hardware_power * kernel_accel_max;
+      const u64 kernel_power_max = hardware_power_max * kernel_accel_max;
 
       // size_pws
 
@@ -14736,7 +14734,7 @@ int backend_session_begin (hashcat_ctx_t *hashcat_ctx)
     {
       while (kernel_accel_max > kernel_accel_min)
       {
-        const u64 kernel_power_max = device_param->hardware_power * kernel_accel_max;
+        const u64 kernel_power_max = hardware_power_max * kernel_accel_max;
 
         if (kernel_power_max > hashes->salts_cnt)
         {
@@ -15050,17 +15048,8 @@ int backend_session_begin (hashcat_ctx_t *hashcat_ctx)
       }
     }
 
-    hardware_power_all += device_param->hardware_power;
-
     EVENT_DATA (EVENT_BACKEND_DEVICE_INIT_POST, &backend_devices_idx, sizeof (int));
   }
-
-  if (user_options->benchmark == false)
-  {
-    if (hardware_power_all == 0) return -1;
-  }
-
-  backend_ctx->hardware_power_all = hardware_power_all;
 
   EVENT_DATA (EVENT_BACKEND_SESSION_HOSTMEM, &size_total_host_all, sizeof (u64));
 
@@ -15550,8 +15539,12 @@ void backend_session_reset (hashcat_ctx_t *hashcat_ctx)
     #else
     device_param->timer_speed.tv_sec = 0;
     #endif
+
+    device_param->kernel_power   = 0;
+    device_param->hardware_power = 0;
   }
 
+  backend_ctx->hardware_power_all = 0;
   backend_ctx->kernel_power_all   = 0;
   backend_ctx->kernel_power_final = 0;
 }
